--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ langs:
   nl: Nederlands
   pl: Polski
   ru: Русский
-  sv: Swedish
+  sv: Svenska
   tr: Türkçe
   zh_CN: ‪简体中文‬
   zh_TW: ‪繁體中文‬
