--- a/_translations/sv.yml
+++ b/_translations/sv.yml
@@ -98,7 +98,7 @@ sv:
   choose-your-wallet:
     title: "Välj plånbok -  Bitcoin"
     pagetitle: "Välj Bitcoin-plånbok"
-    summary: "Din Bitcoin-plånbok är det som tillåter dig att utföra transaktioner med andra användare. Det ger dig ägandeskap över en Bitcoin balans, så du kan skicka och ta emot bitcoins. Precis som email, så kan alla plånböcker interagera med varandra. Innan du startar med Bitcoin se till att du <b><a href=\"#you-need-to-know#\">läser på det du behöver veta</a></b> först."
+    summary: "Din Bitcoin-plånbok är det som tillåter dig att utföra transaktioner med andra användare. Det ger dig ägandeskap över en Bitcoin balans, så du kan skicka och ta emot bitcoins. Precis som email, så kan alla plånböcker interagera med varandra. Innan du startar med Bitcoin se till att du <b><a href=\"#you-need-to-know#\">läser på det du måste veta</a></b> först."
     getstarted: "Kom igång snabbt och enkelt"
     getstarteddesk: "<a href=\"https://multibit.org/\"><b>MultiBit</b></a> är en app som du kan ladda ner för Windows, Mac och Linux."
     getstartedmobi: "<a href=\"https://play.google.com/store/apps/details?id=de.schildbach.wallet\"><b>Bitcoin Wallet</b></a> för Android fungerar på din mobil och surfplatta."
@@ -262,7 +262,7 @@ sv:
     spendbut: "Hitta handlare"
     merchants: "Hur du accepterar Bitcoin"
     merchantinform: "Informera dig"
-    merchantinformtxt: "Bitcoin kräver inte att handlare ska ändra deras vanor. Bitcoin är däremot annorlunda från det du kan och använder varje dag. Innan du börjar använda Bitcoin finns det några saker du behöver veta för att använda det säkert och undvika vanliga misstag."
+    merchantinformtxt: "Bitcoin kräver inte att handlare ska ändra deras vanor. Bitcoin är däremot annorlunda från det du kan och använder varje dag. Innan du börjar använda Bitcoin finns det några saker du måste veta för att använda det säkert och undvika vanliga misstag."
     merchantinformbut: "Läs mer"
     merchantservice: "Processa betalningar"
     merchantservicetxt: "Du kan processa betalningar och fakturor själv eller så kan du använda handlartjänsterna och sätta in pengar in din lokala valuta eller bitcoins. De flesta företag använder en surfplatta eller mobiltelefon, för att låta deras kunder betala via en mobiltelefon."
@@ -485,7 +485,7 @@ sv:
     menu-bitcoin-for-businesses: Företag
     menu-bitcoin-for-developers: Utvecklare
     menu-bitcoin-for-individuals: Privatpersoner
-    menu-community: Gemenskap
+    menu-community: Gemenskaper
     menu-development: Utveckling
     menu-events: Evenemang
     menu-faq: FAQ
@@ -497,7 +497,7 @@ sv:
     menu-resources: Resurser
     menu-support-bitcoin: Delta
     menu-vocabulary: Ordlista
-    menu-you-need-to-know: "Du behöver veta"
+    menu-you-need-to-know: "Du måste veta"
     footer: "Publicerad under  <a href=\"http://opensource.org/licenses/mit-license.php\" target=\"_blank\">MIT licensen</a>"
     sponsor: "En hemsida byggt av medlemmar sponsrat av"
     getstarted: "Kom igång med Bitcoin"
@@ -507,7 +507,7 @@ sv:
     bitcoin-for-individuals: bitcoin-for-privatpersoner
     bitcoin-for-businesses: bitcoin-for-foretag
     choose-your-wallet: valj-din-planbok
-    community: community
+    community: gemenskaper
     development: utveckling
     download: ladda-ner
     events: evenemang
@@ -540,35 +540,35 @@ sv:
       signature: signatur
       wallet: planbok
     faq:
-      general: general
-      whatisbitcoin: what-is-bitcoin
-      creator: who-created-bitcoin
-      whocontrols: who-controls-the-bitcoin-network
-      howitworks: how-does-bitcoin-work
-      acquire: how-does-one-acquire-bitcoins
-      used: "is-bitcoin-really-used-by-people"
-      makepayment: how-difficult-is-it-to-make-a-bitcoin-payment
-      advantages: what-are-the-advantages-of-bitcoin
-      disadvantages: what-are-the-disadvantages-of-bitcoin
-      trust: why-do-people-trust-bitcoin
-      makemoney: can-i-make-money-with-bitcoin
-      virtual: is-bitcoin-fully-virtual-and-immaterial
-      anonymous: is-bitcoin-anonymous
-      lost: what-happens-when-bitcoins-are-lost
-      scale: can-bitcoin-scale-to-become-a-major-payment-network
-      legal: legal
-      islegal: is-bitcoin-legal
-      illegalactivities: is-bitcoin-useful-for-illegal-activities
-      regulated: can-bitcoin-be-regulated
-      taxes: what-about-bitcoin-and-taxes
+      general: generellt
+      whatisbitcoin: vad-ar-bitcoin
+      creator: vem-skapade-bitcoin
+      whocontrols: vem-kontrollerar-bitcoin-natverket
+      howitworks: hur-fungerar-bitcoin
+      acquire: hur-skaffar-jag-bitcoins
+      used: "anvands-verkligen-bitcoin"
+      makepayment: hur-svart-ar-det-att-gora-en-bitcoin-betalning
+      advantages: vad-ar-fordelarna-med-bitcoin
+      disadvantages: vad-ar-nackdelarna-med-bitcoin
+      trust: varfor-litar-folk-pa-bitcoin
+      makemoney: kan-jag-tjana-pengar-pa-bitcoin
+      virtual: ar-bitcoin-helt-virtuellt-och-immateriellt
+      anonymous: ar-bitcoin-anonymt
+      lost: vad-hander-nar-bitcoins-ar-forlorade
+      scale: kan-bitcoin-skala-till-att-bli-ett-stort-betalnatverk
+      legal: juridiskt
+      islegal: ar-bitcoin-lagligt
+      illegalactivities: ar-bitcoin-anvandbart-for-illegal-aktivitet
+      regulated: kan-bitcoin-bli-reglerat
+      taxes: hur-fungerar-bitcoin-och-skatt
       consumer: what-about-bitcoin-and-consumer-protection
-      economy: economy
-      bitcoinscreated: how-are-bitcoins-created
-      whyvalue: why-do-bitcoins-have-value
-      whatprice: what-determines-bitcoins-price
-      worthless: can-bitcoins-become-worthless
-      bubble: is-bitcoin-a-bubble
-      ponzi: is-bitcoin-a-ponzi-scheme
+      economy: ekonomi
+      bitcoinscreated: hur-ar-bitcoin-skapade
+      whyvalue: varfor-har-bitcoins-varde
+      whatprice: var-bestammer-priset-pa-bitcoins
+      worthless: kan-bitcoins-bli-vardelosa
+      bubble: ar-bitcoin-en-bubbla
+      ponzi: ar-bitcoin-bitcoin-ett-ponzischema
       earlyadopter: doesnt-bitcoin-unfairly-benefit-early-adopters
       finitelimitation: wont-the-finite-amount-of-bitcoins-be-a-limitation
       deflationaryspiral: wont-bitcoin-fall-in-a-deflationary-spiral
@@ -591,5 +591,5 @@ sv:
       hacked: hasnt-bitcoin-been-hacked-in-the-past
       collude: could-users-collude-against-bitcoin
       quantum: is-bitcoin-vulnerable-to-quantum-computing
-      help: help
-      morehelp: more-help
+      help: hjalp
+      morehelp: mer-hjalp
