--- a/_translations/sv.yml
+++ b/_translations/sv.yml
@@ -40,7 +40,7 @@ sv:
     pagetitle: "Bitcoin för utvecklare"
     summary: "Bitcoin kan användas till att bygga fantastiska saker eller bara till att tillgodose vanliga behov."
     simple: "Det enklaste av alla betalningssystem"
-    simpletext: "Så länge betalningar inte behöver vara återkommande, så är att det lika lätt att ta emot betalningar som att skicka en länk eller QR-kod. Att komma igång är så enkelt att vem som helst kan göra det. De är speciellt effektivt att använda till donationer och dylikt."
+    simpletext: "Om inte betalning behöver vara förknippade med automatiska fakturor, är det lika enkelt att ta emot betalningar som att skicka en länk eller QR-kod. Att komma igång är så enkelt att vem som helst kan göra det. De är speciellt effektivt att använda till donationer och dylikt."
     api: "Flera tredjeparts-APIer"
     apitext: "Det finns många tredjepartstjänster som tillhandahåller API:er. Det gör att du inte behöver lagra dina bitcoins på din egen dator och hantera all säkerhet som kommer därav. Utöver det så tillhandahåller dessa API:er ett sätt att hantera fakturor och växla dina bitcoins mot din lokala valuta till konkurrenskraftigt pris."
     own: "Du kan vara ditt eget finansiella system"
@@ -68,7 +68,7 @@ sv:
     lowfee: "Inga eller låga avgifter"
     lowfeetext: "Bitcoin tillåter dig att skicka och ta emot betalningar till en väldigt låg kostnad. Förutom i specialfall, som väldigt små betalningar, så finns det ingen påtvingad avgift. Det är rekommenderat att betala en högre frivillig avgift för att få snabbare konfirmation på din transaktion och för att ersätta de personer som får Bitcoin nätverket att fungera."
     anonymous: "Skydda din identitet"
-    anonymoustext: "Med Bitcoin, så finns det inget kreditkortsnummer som en hackare kan använda för att låsas vara du. I praktiken så är det till och med möjligt att skicka en betalning helt utan att avslöja din identitet, precis som med kontanter. Däremot krävs det en viss ansträngning för att helt <a href=\"#protect-your-privacy#\">säkra din identitet</a>."
+    anonymoustext: "Med Bitcoin, så finns det inget kreditkortsnummer som en hackare kan använda för att låsas vara du. I praktiken så är det till och med möjligt att skicka en betalning helt utan att avslöja din identitet, nästan som med kontanter. Däremot krävs det en viss ansträngning för att helt <a href=\"#protect-your-privacy#\">säkra din integritet</a>."
   community:
     title: "Gemenskap - Bitcoin"
     pagetitle: "Bitcoin-gemenskaper"
@@ -241,6 +241,7 @@ sv:
     security: "Säkerhet"
     secure: "Är Bitcoin säkert?"
     hacked: "Har inte Bitcoin hackats tidigare?"
+    collude: "Kan användare konspirera mot Bitcoin?"
     help: "Hjälp"
     morehelp: "Jag skulle vilja veta mer. Var kan jag få hjälp?"
   getting-started:
@@ -265,7 +266,7 @@ sv:
     merchantinformtxt: "Bitcoin kräver inte att handlare ska ändra deras vanor. Bitcoin är däremot annorlunda från det du kan och använder varje dag. Innan du börjar använda Bitcoin finns det några saker du måste veta för att använda det säkert och undvika vanliga misstag."
     merchantinformbut: "Läs mer"
     merchantservice: "Processa betalningar"
-    merchantservicetxt: "Du kan processa betalningar och fakturor själv eller så kan du använda handlartjänsterna och sätta in pengar in din lokala valuta eller bitcoins. De flesta företag använder en surfplatta eller mobiltelefon, för att låta deras kunder betala via en mobiltelefon."
+    merchantservicetxt: "Du kan processa betalningar och fakturor själv eller så kan du använda handlartjänsterna och sätta in pengar in din lokala valuta eller bitcoins. De flesta butikerna använder en surfplatta eller mobiltelefon, för att låta deras kunder betala via en mobiltelefon."
     merchantservicebut: "Hitta tjänster för handlare"
     tax: "Redovisning och skatt"
     taxtxt: "Handlare sätter ofta in och visar priser i deras lokala valuta. I andra fall fungerar Bitcoin likt en utländsk valuta. För att få lämplig vägledning om skattefrågor, bör du kontakta en kvalificerad revisor."
@@ -284,7 +285,7 @@ sv:
     transactions: "Transaktioner<a class=\"titlelight\"> - privata nycklar</a>"
     transactionstxt: "En transaktion är <b>en överföring av pengar mellan två Bitcoin-plånböcker</b> som är inkluderade i blockkedjan. Bitcoin-plånböcker håller en hemlig del data kallad <a href=\"#vocabulary##[vocabulary.privatekey]\"><i>privat nyckel</i></a>, som används för att signera transaktioner. Signeringen görs med ett matematiskt bevis, som bevisar att ursprunget, är ägaren av plånboken. <a href=\"#vocabulary##[vocabulary.signature]\"><i>Signaturen</i></a> förhindrar också transaktionen från att bli manipulerad av någon annan så fort den utförts. Alla transaktioner är förmedlade mellan användare och börjar oftast bli konfirmerat av nätverket de efterföljande 10 minuterna i en process kallad  <a href=\"#vocabulary##[vocabulary.mining]\"><i>utvinning</i></a>."
     processing: "Processering<a class=\"titlelight\"> - utvinning</a>"
-    processingtxt: "Utvinning är ett <b>distribuerat konsensus system</b> som används för att <a href=\"#vocabulary##[vocabulary.confirmation]\"><i>konfirmera</i></a> väntande transaktioner genom att inkludera dom i blockkedjan. Den påtvingar kronologisk ordning i blockkedjan, skyddar neutraliteten av nätverket och tillåter olika datorer att komma överens systemets tillstånd. För att bli konfirmerad måste en transaktion bli packeterat i ett <a href=\"#vocabulary##[vocabulary.block]\"><i>block</i></a> som följer väldigt strikta kryptografiska regler och verifieras av nätverket. Dessa regler förhindrar tidigare block från att bli modifierade eftersom det skulle medföra invalidering av tidigare block. Utvinning skapar också motsvarigheten till ett konkurrensutsatt lotteri som förhindrar individer från att enkelt kunna addera nya block konsekutivt i blockkedjan. På det här sättet kan ingen individ kontrollera vad som är inkluderat i blockkedjan eller ersätta delar av blockkedjan för att backa deras egna transaktioner."
+    processingtxt: "Utvinning är ett <b>distribuerat konsensus system</b> som används för att <a href=\"#vocabulary##[vocabulary.confirmation]\"><i>konfirmera</i></a> väntande transaktioner genom att inkludera dom i blockkedjan. Den påtvingar kronologisk ordning i blockkedjan, skyddar neutraliteten av nätverket och tillåter olika datorer att komma överens systemets tillstånd. För att bli konfirmerad måste en transaktion bli packeterat i ett <a href=\"#vocabulary##[vocabulary.block]\"><i>block</i></a> som följer väldigt strikta kryptografiska regler och verifieras av nätverket. Dessa regler förhindrar tidigare block från att bli modifierade eftersom det skulle medföra invalidering av tidigare block. Utvinning skapar också motsvarigheten till ett konkurrensutsatt lotteri som förhindrar individer från att enkelt kunna addera nya block konsekutivt i blockkedjan. På det här sättet kan ingen individ enskilt styra vad som är inkluderat i blockkedjan eller ersätta delar av blockkedjan för att backa deras egna transaktioner."
     readmore: "Lär dig mer om Bitcoin"
     readmoretxt: "Det här är bara en kort och enkel sammanfattning av systemet. Om du vill lära dig detaljerna så kan du <a href=\"/bitcoin.pdf\">läsa original rapporten</a> som beskriver systemets design, och utforska <a href=\"https://en.bitcoin.it/wiki/Main_Page\">Bitcoin-wikin</a>."
   index:
@@ -313,7 +314,7 @@ sv:
     crowdfunding: "Crowdfunding"
     crowdfundingtext: "Även fast det inte är enkelt att använda än, så kan man använda Bitcoin för att köra en crowdfunding kampanj likt Kickstarter där privatpersoner kan förbinda sig till att investera ett visst belopp om tillräckligt mycket pengar samlas in totalt för att nå kampanjmålet. Sådana kontrakt är möjligt med Bitcoin protokollet, alltså att förhindra att ett antal transaktioner görs förens ett visst krav har uppfyllts. <a href=\"https://en.bitcoin.it/wiki/Contracts#Example_3:_Assurance_contracts\">Läs mer</a> om tekniken bakom crowdfunding."
     micro: "Mikrobetalningar"
-    microtext: "Bitcoin kan processa betalningar på bara några kronor och snart mycket mindre belopp än så. Sådana betalningar är rutin redan idag. Tänkt dig att lyssna till Internet radio betalat per sekund, titta på hemsidor och betala en liten summa för reklam du slipper se eller köpa bandbredd från en WiFi-hotspot per kilobyte. Bitcoin är effektivt nog för att göra alla dessa idéer möjliga. <a href=\"https://bitcoinj.github.io/working-with-micropayments\">Läs mer</a> om tekniken bakom Bitcoins mikrobetalningar."
+    microtext: "Bitcoin kan processa betalningar på bara några kronor och snart mycket mindre belopp än så. Sådana betalningar är rutin redan idag. Tänkt dig att lyssna till Internet radio betalat per sekund, titta på hemsidor och betala en liten summa för reklam du slipper se eller köpa bandbredd från en WiFi-hotspot per kilobyte. Bitcoin är effektivt nog för att göra alla dessa idéer möjliga. <a href=\"https://bitcoinj.github.io/working-with-micropayments\">Läs mer</a> om tekniken bakom Bitcoin-mikrobetalningar."
     mediation: "Dispyt medling"
     mediationtext: "Bitcoin kan användas för att utveckla innovativa dispytmedlingstjänster som använder flera signaturer. Sådana tjänster skulle göra det möjligt för en tredje part att acceptera eller inte acceptera en transaktion ifall det skulle uppstå en dispyt mellan betalare och mottagare utan att ha kontroll över deras pengar. Eftersom dessa tjänster skulle vara kompatibla med alla användare och handlare som använder Bitcoin, skulle de kunna leda till friare konkurrens och högre kvalité på tjänsterna."
     multisig: "Mutli-signatur konton"
