--- a/_translations/sv.yml
+++ b/_translations/sv.yml
@@ -512,7 +512,7 @@ sv:
     development: utveckling
     download: ladda-ner
     events: evenemang
-    getting-started: komma-igang
+    getting-started: kom-igang
     how-it-works: hur-det-fungerar
     innovation: innovation
     legal: juridiskt
